--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html> 
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title> Home page </title>
+    </head>
 
+
+<body>
+    <Header>
+        <h1> Home Page </h1>
+        <nav>
+            <ul>
+                <li><a href="index.html"> Home</a></li>
+                <li><a href="menu.html"> Menu </a></li>
+                <li><a href="contact.html"> Contact Us</a></li>
+                <li><a href="team.html"> Our Team </a></li>
+            </ul>
+        </nav>
+    </Header>
+
+    <main>
+        <center> <img src="Saffron logo.png"> </center>
+        <p>We welcome you to our family owned and operated Indian Restaurant. 
+            At Saffron, we source the best ingredients and grind our own spices in house, which give our food a fresh and unique taste. 
+         Our hard work and our pure dedication shows in our great tasting food and positive service.At Saffron, we pride ourselves as a true family friendly restaurant. We open our hearts and doors for you and your family. </p>
+    </main>
+
+    <footer> Saffron 2025 </footer>
+</body>
+</html>
