--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html> 
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title> Contact </title>
+    </head>
 
+
+<body>
+
+    <Header>
+        <h1> Contact Us </h1>
+        <nav>
+            <ul>
+                <li><a href="index.html"> Home</a></li>
+                <li><a href="menu.html"> Menu </a></li>
+                <li><a href="contact.html"> Contact Us</a></li>
+                <li><a href="team.html"> Our Team </a></li>
+            </ul>
+        </nav>
+        
+    </Header>
+
+    <main>
+        <center> <img src="Contact image.png"> </center>
+        <p>Address: #59-5755 Cowrie St. Sechelt, BC V0N 3A0 (Outside Trail Bay Mall) </p>		
+        <p>Phone: 604-740-0660 </p>
+        <p>Restaurant Hours: Open Monday - Sunday 11:30 am - 9 pm </p>
+    </main>
+
+    <footer> Saffron 2025 </footer>
+</body>
+</html>
