--- a/team.html
+++ b/team.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html> 
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title> Team </title>
+    </head>
 
+
+<body>
+    <Header>
+        <h1> Our Team </h1>
+        <nav>
+            <ul>
+                <li><a href="index.html"> Home</a></li>
+                <li><a href="menu.html"> Menu </a></li>
+                <li><a href="contact.html"> Contact Us</a></li>
+                <li><a href="team.html"> Our Team </a></li>
+            </ul>
+        </nav>
+    </Header>
+
+    <main>
+      <center> <img src="Team saffron.jpeg"> </center>
+        <p>We are a family owned establishment and live on the Sunshine Coast. We have been here since 1987. Our family of chefs and servers are happy to serve you!</p>
+    </main>
+
+    <footer> Saffron 2025 </footer>
+</body>
+</html>
